--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-pandas
-numpy
-scikit-learn
-nltk
-beautifulsoup4
+cryptography
 requests
+pandas
+nltk
 transformers
-torch
-requests 
+scikit-learn
+yfinance
