--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-cryptography
-requests
-pandas
-nltk
-transformers
-scikit-learn
+streamlit
+tensorflow
+numpy
+matplotlib
 yfinance
+nltk
+scikit-learn
+transformers
+
